@@ -36,7 +36,10 @@ public final class RoutingTable
             return false;
         }
 
-        ObjectPrx proxy = prx.ice_default(); // We insert the proxy in its default form into the routing table.
+	//
+	// We insert the proxy in its default form into the routing table.
+	//
+        ObjectPrx proxy = prx.ice_twoway().ice_secure(false);
 
         synchronized(this)
         {
